--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "express": "^4.19.2",
     "googleapis": "^137.1.0",
     "mongodb": "^6.7.0",
+    "multer": "^1.4.5-lts.1",
     "tsc-watch": "^6.2.0",
     "typescript": "^5.4.5"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.21"
+    "@types/express": "^4.17.21",
+    "@types/multer": "^1.4.11"
   }
 }
